[lworld] C2 compilation fails in PhaseCFG::insert_anti_dependences

XMLWordPrintable

      Hotspot produced this error report.

      NB: There are significant modifications to java.util.HashMap that
      utilize inline classes. There is at least some unknown bug in
      the Hashmap implementation. In some cases it has resulted in corrupted classfiles.

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/gcm.cpp:526
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (open/src/hotspot/share/opto/gcm.cpp:526), pid=26570, tid=26594
      # assert(load_alias_idx || (load->is_Mach() && load->as_Mach()->ideal_Opcode() == Op_StrComp)) failed: String compare is only known 'load' that does not conflict with any stores
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0) (fastdebug build 14-lworldea+0-2019-10-26-1616424.rriggs.valhalla-dev)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-lworldea+0-2019-10-26-1616424.rriggs.valhalla-dev, mixed mode, tiered, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xd205d1] PhaseCFG::insert_anti_dependences(Block*, Node*, bool)+0xe1
      #
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %d %P" (or dumping to .../valhalla-dev/open/core.26570)
      #
      # An error report file with more information is saved as:
      # .../valhalla-dev/open/hs_err_pid26570.log
      #
      # Compiler replay data is saved as:
      # .../valhalla-dev/open/replay_pid26570.log
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #
      Current thread is 26594
      Dumping core ...
      Error: Compilation of extra property definition files failed. rc=134

      At the time, jtreg was invoking javac to generate the VMProps.class.

            Assignee:
            Tobias Hartmann
            Reporter:
            Roger Riggs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: