8233076: [lworld] C2 compilation fails in PhaseCFG::insert_anti_dependences